Fix deprecated java.net.URL constructor since Java 20