@@ -23,7 +23,8 @@ import java.awt.Font;
 import java.awt.Rectangle;
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.text.SimpleDateFormat;
 import java.util.Date;
 import java.util.TimeZone;
@@ -327,7 +328,12 @@ public class FirmadorPAdES extends CRSigner {
         imageParameters.setTextParameters(textParameters);
         try {
             if (image != null && !image.trim().isEmpty()) {
-                imageParameters.setImage(new InMemoryDocument(Utils.toByteArray(new URL(image).openStream())));
+                try {
+                    imageParameters.setImage(new InMemoryDocument(Utils.toByteArray(new URI(image).toURL().openStream())));
+                } catch (URISyntaxException e) {
+                    LOG.error("Error de sintaxis en la URI de la imagen", e);
+                    e.printStackTrace();
+                }
             }
 
         } catch (IOException e) {
