@@ -30,7 +30,8 @@ import java.awt.event.MouseEvent;
 import java.awt.event.MouseMotionAdapter;
 import java.awt.image.BufferedImage;
 import java.lang.invoke.MethodHandles;
-import java.net.URL;
+import java.net.URI;
+import java.nio.file.Paths;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
@@ -258,7 +259,7 @@ public class SignPanel extends JPanel implements ConfigListener{
         if(previewimg != null) {
             BufferedImage bufferedImage = null;
             try {
-                bufferedImage = ImageIO.read(new URL(previewimg));
+                bufferedImage = ImageIO.read(Paths.get(previewimg).toUri().toURL());
             } catch (Exception e) {
                 LOG.error("Error cargando imagen", e);
                 gui.showError(FirmadorUtils.getRootCause(e));
